Add trie and finish program

--- a/CLL/CMakeLists.txt
+++ b/CLL/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CLL)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(CLL main.cpp CLA.cpp CLA.h History.cpp History.h Command.cpp Command.h)
+add_executable(CLL main.cpp CLA.cpp CLA.h History.cpp History.h  Trie.cpp Trie.h)
